# Platformer-2D

./: Cargo.toml  readme.md
assets/prefab/: player.ron
assets/texture/: player.ron
assets/tiles/: map.tmx  test.tmx  tiles.ron  tileset cave 2.tsx  tileset.ron  tileset.tsx
config/: bindings.ron  display.ron
scripts/: build_tileset_ron.py  color.py
src/: game.rs  load.rs  main.rs  menu.rs  tiles.rs
src/components/: damageable.rs  mod.rs  movable.rs  physics.rs  player.rs  team.rs
src/prefabs/: mod.rs  player.rs
src/systems/: mod.rs  physics.rs  player_input.rs
