[package]
name = "platformer-2d"
version = "0.1.0"
authors = ["jecaspa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.13"
amethyst_tiles = "0.1"
amethyst_window = "0.1"
serde = { version = "1.0", features = ["derive"] }
tiled = "0.8"

[features]
default = ["amethyst/vulkan"]