[package]
name = "platformer-2d"
version = "0.1.0"
authors = ["jecaspa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.13", features = ["vulkan", "tiles"] }
serde = { version = "1.0", features = ["derive"] }
tiled = "0.8"
nalgebra = "0.19"
ncollide2d = "0.21"
nphysics2d = "0.13"
shred = { version = "0.9.4", features = ["nightly"] , optional = true }

[features]
release = ["amethyst/no-slow-safety-checks"]
nightly = ["shred/nightly"]